# pelican-precompress

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  CHANGES.rst  LICENSE.txt  README.rst  pyproject.toml  setup.py  test_pelican_precompress.py  tox.ini
.github/: FUNDING.yml
.github/workflows/: prep-release.yaml  test.yaml
changelog.d/: 20240916_082428_kurtmckee_unreleased_changes.rst  20240916_083834_kurtmckee_use_scriv.rst  20250226_040638_kurtmckee_updates.rst  20250226_051824_kurtmckee_zstd.rst  20250226_082313_kurtmckee_zstd.rst  20250521_172903_kurtmckee_py3_14.rst  20251204_105544_kurtmckee_backports_zstd.rst  README.rst  fragment-template.rst.txt
requirements/test/: pyproject.toml  requirements-coverage.txt  requirements.txt
src/pelican/plugins/precompress/: __init__.py  compat.py
tests/: test_pelican_precompress.py
