[tool.poetry]
name = "pelican_precompress"
version = "2.1.1"
description = "Pre-compress your Pelican site using gzip, zopfli, and brotli!"
authors = ["Kurt McKee <contactme@kurtmckee.org>"]
license = "MIT"
packages = [
    { include = "pelican", from = "src" }
]
readme = "README.rst"
repository = "https://github.com/kurtmckee/pelican_precompress/"
keywords = ["pelican", "plugin", "gzip", "brotli", "zopfli"]
classifiers = [
    "Framework :: Pelican :: Plugins",
    "Development Status :: 5 - Production/Stable",
]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
pelican-granular-signals = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.coverage.run]
branch = true


[tool.coverage.paths]
source = [
    "src",
    "*/site-packages",
]


[tool.isort]
profile = "black"


[tool.pytest.ini_options]
filterwarnings = [
    "error",
]
