[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


# poetry
# ------

[tool.poetry]
name = "pelican_precompress"
version = "2.2.0"
description = "Pre-compress your Pelican site using gzip, zopfli, and brotli!"
authors = ["Kurt McKee <contactme@kurtmckee.org>"]
license = "MIT"
packages = [
    { include = "pelican", from = "src" }
]
readme = "README.rst"
repository = "https://github.com/kurtmckee/pelican_precompress/"
keywords = ["pelican", "plugin", "gzip", "brotli", "zopfli"]
classifiers = [
    "Framework :: Pelican :: Plugins",
    "Development Status :: 5 - Production/Stable",
]

[tool.poetry.dependencies]
python = ">=3.9"
pelican-granular-signals = "^1.0.0"


# coverage
# --------

[tool.coverage.run]
branch = true
parallel = true
data_file = ".tox/.coverage-data-files/.coverage"
source = [
    "pelican.plugins.precompress",
    "tests",
]

[tool.coverage.paths]
source = [
    "src",
    "*/site-packages",
]

[tool.coverage.report]
fail_under = 100


# isort
# -----

[tool.isort]
profile = "black"


# pytest
# ------

[tool.pytest.ini_options]
addopts = "--color=yes"
filterwarnings = [
    "error",
    # pyfakefs 5.6.0 on Python 3.13 throws ResourceWarnings.
    "ignore:unclosed file.+pyfakefs:ResourceWarning",
]


# scriv
# -----

[tool.scriv]
version = "literal: pyproject.toml: tool.poetry.version"
categories = [
    "Breaking changes",
    "Python support",
    "Added",
    "Fixed",
    "Removed",
    "Changed",
    "Deprecated",
    "Security",
    "Development",
]
entry_title_template = "{{ version }} - {{ date.strftime('%Y-%m-%d') }}"
format = "rst"
fragment_directory = "changelog.d"
insert_marker = "scriv-insert-here"
main_branches = ["main", "releases"]
new_fragment_template = "file: fragment-template.rst.txt"
